welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: not found: value nums
    if (num(i+1)==nums(i)-1){
                  ^